fix: bugfix profile overflow

--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -13,7 +13,7 @@
   }
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 520px){
   .profile__container {
     gap: 0;
     width: 100%;
