--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,9 +7,9 @@
   max-width: 300px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 520px) {
   .profile__info {
-    max-width: 225px;
+    max-width: 70%;
     margin: 26px auto 34px;
     text-align: center;
   }
