--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,7 +5,7 @@
   gap: 30px;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 520px){
   .profile {
     flex-direction: column;
     margin: 0 auto;
